--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Konkura</string>
     <string name="splash_text">کنکورا : بانک جامع سوالات کنکور</string>
     <string name="iconSplash">iconSplash</string>
+    <string name="ensani">انسانی</string>
+    <string name="tajrobi">تجربی</string>
+    <string name="riazi">ریاضی</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
